# AI-Training

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
LLMs-from-scratch/: SimpleTokenizerV1.py  SimpleTokenizerV2.py  Tiktoken.py  attention.py  do_gpt_download.py  gpt.py  gpt_class_finetune.py  gpt_dataset.py  gpt_generate.py  gpt_instruction_finetuning.py  gpt_train.py  gpt_with_kv_cache.py  model.py  requirements.txt  token_embedding.py  tokenizer.py  understanding_attention.py  utils.py
LLMs-from-scratch/exercises/: exercise_3_3.py
lesson02/: Demo01.py  Demo02.py  Demo03.py
lesson02/KG/: 合同.txt
lesson04/: .env  agent.py
reasoning-from-scratch/: ch03.py  utils.py
reasoning-from-scratch/libs/: ch02.py
