[project]
name = "ai-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "tensorflow>=2.15.0",
    "tiktoken>=0.12.0",
    "torch==2.1.0",
    "torchaudio==2.1.0",
    "torchvision==0.16.0",
    "tqdm>=4.6",
]
